force-app/main/default/objects/VehicleInformation__c/VehicleInformation__c.object-meta.xml
<CustomObject>
    <description
  >Holds Information of vehicle and its specifications</description>
    <label>VehicleInformation</label>
    <nameField>
        <displayFormat>VEH-{000}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VehicleInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>