force-app/main/default/objects/VehicleInformation__c/fields/BodyStyle__c.field-meta.xml
<CustomField>
    <fullName>BodyStyle__c</fullName>
    <description>Body Style</description>
    <label>Body Style</label>
    <length>40</length>
    <type>Text</type>
</CustomField>