force-app/main/default/objects/VehicleInformation__c/fields/BookedDate__c.field-meta.xml
<CustomField>
    <fullName>BookedDate__c</fullName>
    <description>Booking Date</description>
    <label>Booked Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>