force-app/main/default/objects/VehicleInformation__c/fields/Drivetrain__c.field-meta.xml
<CustomField>
    <fullName>Drivetrain__c</fullName>
    <description>Drivetrain</description>
    <label>Drivetrain</label>
    <length>40</length>
    <type>Text</type>
</CustomField>