force-app/main/default/objects/VehicleInformation__c/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <description>Engine detail</description>
    <label>Engine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engine 1</fullName>
            </value>
            <value>
                <fullName>Engine 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>