force-app/main/default/objects/VehicleInformation__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Make</description>
    <label>Make</label>
    <length>40</length>
    <type>Text</type>
</CustomField>