force-app/main/default/objects/VehicleInformation__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>Mileage of the vehicle</description>
    <label>Mileage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>