force-app/main/default/objects/VehicleInformation__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the vehicle</description>
    <label>Model</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>