force-app/main/default/objects/VehicleInformation__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <description>Model year</description>
    <label>Model Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>