force-app/main/default/objects/VehicleInformation__c/fields/StockNumber__c.field-meta.xml
<CustomField>
    <fullName>StockNumber__c</fullName>
    <description>Stock Number of vehicle</description>
    <label>Stock Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>