force-app/main/default/objects/VehicleInformation__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>Transmission details</description>
    <label>Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>