force-app/main/default/objects/VehicleInformation__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <description>Trim</description>
    <label>Trim</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>