force-app/main/default/objects/VehicleInformation__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Vehicle information number</description>
    <label>VIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>